footer overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   font-family: Poppins;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 .d-flex{
   display: flex
