--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,8 +1,7 @@
 footer{
     background: #fcc01c;
     text-align: center;
-    padding: 1em;
-    width: 100vw;
+    padding: 1em 0;
     color: #000;
 }
 
@@ -27,12 +26,11 @@ footer{
 .soc{
     height: 2em;
     width: 10em;
-    /* ma */
 }
 .foot-form{
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 70%;
     margin-inline: auto;
 }
 
@@ -41,19 +39,27 @@ footer{
     outline: 0;
     margin: 5px 0;
     padding: 0.5em;
+ 
     border-radius: 40px;
 }
 .foot-form button{
-    border-radius: 40px;
+    border-radius: 2.5rem;
     background: #000;
     color: #fff;
     margin: 1em;
+    padding: 0.5em 0;
+    cursor: pointer;
+}
+.b-f-head{
+    font-size: 1.25rem;
+    font-weight: 500;
 }
 
 @media screen and (min-width: 768px){
 footer{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 30vw));
+    grid-template-columns: repeat(auto-fit, minmax(120px, 30vw));
+    overflow-x: hidden;
 }
 .flog {
     width: 5rem;
@@ -64,30 +70,37 @@ footer{
 }
 .section-tw{
     display: grid;
+    margin: 0;
 }
 .section-th{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 30px;
-    margin: 1em auto;
+    gap: 20px;
+    margin: 1em 0;
+    text-align: left;
 }
 
 .foot-form{
     flex-direction: row;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 }
 .nam-inp{
-    width: 261px;
+    width: 16.3125rem;
     height: 3.75rem;
-    margin-right: 5px;
 }
 .mai-inp{
-    width: 499px;
+    width: 30.875rem;
     height: 3.75rem;
-    margin-right: 5px;
+
 }
+.foot-form input{
+        padding-left: 2em;
+}
+
 .foot-form button{
-    height: 3.75rem
+    height: 3.75rem;
+    /* width: 5em; */
+    padding: 1em;
 }
 }
